--- a/lab_1/src/index.html
+++ b/lab_1/src/index.html
@@ -12,11 +12,11 @@
   <body>
     <nav>
       <div class="nav__block default-width">
-        <span class="nav__logo">
-          <img src="./img/icon-menu.svg" class="nav__block__menu" />
-          <img src="./img/icon-layout.svg" class="nav__block__icon" />
+        <div class="nav__logo">
+          <img alt="menu" src="./img/icon-menu.svg" class="nav__block__menu" />
+          <img alt="" src="./img/icon-layout.svg" class="nav__block__icon" />
           <h3>Grid</h3>
-        </span>
+        </div>
         <span class="nav__pages">
           <a class="nav__pages__link nav__pages__link--selected" href="#"
             >How it works</a
@@ -25,9 +25,7 @@
           ><a class="nav__pages__link" href="#">Contact us</a>
         </span>
         <span class="nav__sign">
-          <button class="nav__sign__button">
-            <a>Sign In</a>
-          </button>
+          <button class="nav__sign__button">Sign In</button>
         </span>
       </div>
       <div class="nav--mobile">
@@ -38,8 +36,8 @@
       </div>
     </nav>
     <main>
-      <img src="./img/main-bg.png" class="bg-rectangle" />
-      <img src="./img/🎨 Dots 1.svg" class="bg-dots" />
+      <img alt="" src="./img/main-bg.png" class="bg-rectangle" />
+      <img alt="" src="./img/Dots-1.svg" class="bg-dots" />
       <section class="image-grid default-width">
         <h1 class="image-grid__title">
           Combine <span class="image-grid__highlight">fine</span> images
@@ -51,7 +49,7 @@
             descriptions
           </div>
           <div class="image-grid__item image-grid__item--second">
-            <img src="./img/🗻 Simple-5.png" alt="consider it done!/" />
+            <img src="./img/Simple-5.png" alt="consider it done!/" />
             <div class="image-captions">Consider it done!</div>
           </div>
           <div class="image-grid__item image-grid__item--third">
@@ -59,30 +57,30 @@
             web site
           </div>
           <div class="image-grid__item image-grid__item--fourth">
-            <img src="./img/🗻 Simple-6.png" alt="our aim" />
+            <img src="./img/Simple-6.png" alt="our aim" />
             <div class="image-captions">
               We aimed to deliver HQ templates for Figma <br />
               <span class="image-captions--smaller">Used by 123 people</span>
             </div>
           </div>
           <div class="image-grid__item image-grid__item--fifth">
-            <img src="./img/🗻 Simple.png" />
+            <img alt="A" src="./img/Simple.png" />
           </div>
           <div class="image-grid__item image-grid__item--sixth">
-            <img src="./img/🗻 Simple-3.png" />
+            <img alt="nike" src="./img/Simple-3.png" />
           </div>
           <div class="image-grid__item image-grid__item--seventh">
             <button class="image-grid__follow-link">Learn more</button>
           </div>
           <div class="image-grid__item image-grid__item--eigth">
-            <img src="./img/🗻 Simple-1.png" />
+            <img alt="change by design" src="./img/Simple-1.png" />
           </div>
           <div class="image-grid__item image-grid__item--ninth">
-            <img src="./img/🗻 Simple-2.png" alt="see my goal?" />
+            <img src="./img/Simple-2.png" alt="see my goal?" />
             <div class="image-captions">See my goal?</div>
           </div>
           <div class="image-grid__item image-grid__item--tenth">
-            <img src="./img/🗻 Simple-4.png" />
+            <img alt="window" src="./img/Simple-4.png" />
           </div>
         </div>
       </section>
@@ -101,9 +99,7 @@
               Delivering faster and more personalized support with shared
               screens and cool design systems for Figma
             </div>
-            <button class="feature__button">
-              <a href="#">Learn more</a>
-            </button>
+            <button class="feature__button">Learn more</button>
           </div>
           <div class="features__feature">
             <div class="feature__icon icon__chart"></div>
@@ -112,9 +108,7 @@
               Identify qualified customers with easy-to-use live chat messaging
               and AI-based Sales Bot
             </div>
-            <button class="feature__button">
-              <a href="#">Learn more</a>
-            </button>
+            <button class="feature__button">Learn more</button>
           </div>
           <div class="features__feature">
             <div class="feature__icon icon__zap"></div>
@@ -123,9 +117,7 @@
               Delivering faster and more personalized support with shared
               screens and cool design systems for Figma
             </div>
-            <button class="feature__button">
-              <a href="#">Learn more</a>
-            </button>
+            <button class="feature__button">Learn more</button>
           </div>
           <div class="features__feature">
             <div class="feature__icon icon__thumb"></div>
@@ -134,9 +126,7 @@
               You can toggle to any icon within Instances and customize outlined
               stroke to more bolder or lighter
             </div>
-            <button class="feature__button">
-              <a href="#">Learn more</a>
-            </button>
+            <button class="feature__button">Learn more</button>
           </div>
         </div>
       </section>
@@ -177,10 +167,10 @@
           </div>
           <div class="prices__billing-card prices__billing-card--prior">
             <div class="card__content">
-              <span class="card__name"
-                >👤 Individual
+              <div class="card__name">
+                👤 Individual
                 <div class="card__name--best-option">best!</div>
-              </span>
+              </div>
               <div class="card__price">
                 <span class="card__price__cost">$24</span> /
                 <span class="card__price__period">month</span>
@@ -238,16 +228,18 @@
           <span class="footer__item__title">follow us</span>
           <div class="social__items">
             <div class="social__item social__fb">
-              <a href="#"><img src="./img/icon-facebook.svg" /></a>
+              <a href="#"><img alt="fb" src="./img/icon-facebook.svg" /></a>
             </div>
             <div class="social__item social__linkedin">
-              <a href="#"><img src="./img/icon-linkedin.svg" /></a>
+              <a href="#"
+                ><img alt="linkedin" src="./img/icon-linkedin.svg"
+              /></a>
             </div>
             <div class="social__item social__slack">
-              <a href="#"><img src="./img/icon-slack.svg" /></a>
+              <a href="#"><img alt="slack" src="./img/icon-slack.svg" /></a>
             </div>
             <div class="social__item social__twitter">
-              <a href="#"><img src="./img/icon-twitter.svg" /></a>
+              <a href="#"><img alt="twitter" src="./img/icon-twitter.svg" /></a>
             </div>
           </div>
         </div>
@@ -294,6 +286,6 @@
         </div>
       </div>
     </footer>
+    <script src="./index.js"></script>
   </body>
-  <script src="./index.js"></script>
 </html>
